--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -3,18 +3,16 @@
         width: 12px;
         height: 12px;
     }
+    
     &::-webkit-scrollbar-button {
-    width: 0px;
-    height: 0px;
+        width: 0px;
+        height: 0px;
     }
-    &::-webkit-scrollbar-thumb {
-    background: $black;
-    border: none;
-    border-radius: $border-radius;
 
-    &:hover {
-        background: rgba($black, .85);
-    }
+    &::-webkit-scrollbar-thumb {
+        background: $black-gradient;
+        border: none;
+        border-radius: $border-radius;
     }
 
     &::-webkit-scrollbar-track {
